# wri-odp

./: .codeql-config.yml  .gitignore  LICENSE  README.md  ckanext-wri  package-lock.json
.github/workflows/: codeql.yml  cost-splitting-report.yml  cypress.yml  main.yml  test-cost-splitting.yml  test.yml
ckan-backend-dev/: .env.example  .env.frontend.example  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  test.txt
ckan-backend-dev/ckan/: Dockerfile.dev
ckan-backend-dev/postgresql/: Dockerfile
ckan-backend-dev/prefect-server/: Dockerfile
ckan-backend-dev/wri-integration-tests/: package-lock.json  (+3 more)
ckan-deployment/: README.md
datapusher/: Dockerfile  README.md  config.py  entrypoint.sh  fetch.js  helpers.py  main.py  models.py  requirements.txt
deployment/: README.md
e2e-tests/: cypress.config.js  package-lock.json  package.json  routes.json
integration-tests/: cypress.json  cypress.json.example  test.js
migration/: Dockerfile  README.md  main.py  requirements.txt  trigger-migraiton.py
prefect-server/: Dockerfile  README.md  values.yaml
scripts/cost-splitting/: README.md  lib.py  pyproject.toml  script.py  test_script.py
scripts/cost-splitting/data/: storage_costs.csv  storage_costs_2023_10_12T12_31_08_247811.csv  storage_costs_2023_10_12T12_34_55_023216.csv  storage_costs_2023_10_12T13_07_26_253699.csv  storage_costs_2023_10_12T13_09_43_148295.csv  storage_costs_2023_10_12T13_14_23_929839.csv  storage_costs_2023_10_12T13_40_23_333133.csv  storage_costs_2023_10_12T15_21_37_749285.csv
scripts/cost-splitting/docs/: README.md
(+5500 files in other folders)
