[tool.poetry]
name = "cost-splitting"
version = "0.1.0"
description = ""
authors = ["Luccas Mateus <luccasmmg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.57"
python-dotenv = "^1.0.0"
moto = "^4.2.5"
requests = "^2.31.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-recording = "^0.13.0"
hypothesis = "^6.87.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
